# harmony-42-keyboard

./: README.md
assets/pcba_jlcpcb-production_20240707/: bom.csv  designators.csv  netlist.ipc
electronics/Project_Library.pretty/: Key_Switch_Mark.kicad_mod  Key_Switch_Plate_Hole.kicad_mod  SOT-23-5.kicad_mod  XSON-8-EP_4x4mm.kicad_mod
electronics/harmony-42-pcb/: harmony-42-pcb.kicad_pcb  harmony-42-pcb.kicad_pro  harmony-42-pcb.kicad_sch  harmony-42-pcb_simple.kicad_pcb  harmony-42-pcb_simple.step
electronics/harmony-42-pcb_production/: positions.csv
electronics/harmony-42-plate/: harmony-42-plate.kicad_pcb  harmony-42-plate.kicad_pro
electronics/mcu-16-pcb/: mcu-16-pcb.kicad_pcb  mcu-16-pcb.kicad_pro  mcu-16-pcb.kicad_sch
layout/: keyboard-layout.rawdata.json  locations-pcb.csv  locations.csv
layout/editor/: .gitignore  main.py  pyproject.toml
layout/editor/kls/: __init__.py  layout.py
mechanics/: .gitignore  harmony-42-case-Bottom.step  harmony-42-case-Top.step  harmony-42-case.FCStd  harmony-42-pcb.step  harmony-42-plate.step  mcu-16-pcb.step
vial-bin/: takayoshiotake_harmony_42_vial_20240714.uf2  takayoshiotake_harmony_42_vial_20240726.uf2
vial-porting/: info.json
vial-porting/keymaps/vial/: config.h
